# crypto-wallet

./: .gitignore  CLAUDE.md  Crypto-Wallet-Design-Doc.md  LICENSE  README.md  TODO
.claude/commands/: next-task.md  ship.md
.github/workflows/: claude-code-review.yml
backend/: .env.example  Cargo.toml  go.mod  wallet.db
backend/.sqlx/: query-213cc5fbec2dfb0b74a0cdc1a53913174c3778204c2757d96356870dcebca2d0.json  query-67accab6e0a5bc1ee3fd4dbc3abfec306ee117ec26f9d0ac43eeb8e6cd31df1f.json  query-6dfc3f03990cfce9d57bc00249249e2bbee633ec2500be45927eb11b1be86dbb.json  query-71ee16a1220429e8f8a345d2ca723ca29debaf62206c3d0cbfb9400c5e6f8ffa.json
backend/cmd/server/: main.go
backend/data/: wallet.db
backend/internal/api/: handlers.go  handlers_test.go  middleware_test.go  server.go
backend/internal/database/: database_test.go  models.go  schema.sql  transaction.go  transaction_test.go  wallet.go  wallet_address.go
backend/internal/service/: etherscan.go  etherscan_test.go
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  server.rs  types.rs  wallet.rs
backend/src/core/: mod.rs
backend/src/core/security/: encryption.rs  mod.rs
backend/src/core/wallet/: hd_wallet.rs  mnemonic.rs  mod.rs
backend/src/database/: connection.rs  mod.rs  models.rs  schema.sql  wallet.rs  wallet_address.rs
backend/tests/: dependency_test.rs  encryption_test.rs  hd_wallet_test.rs  security_test.rs
documentations/: Crypto-Wallet-Design-Doc.md
documentations/implementation-logs/: P1-W1-BE-T1-Implementation-Log.md  P1-W1-BE-T2-Implementation-Log.md  P1-W1-BE-T4-Implementation-Log.md  P1-W1-FE-T1-Implementation-Log.md  P1-W2-BE-T2-Implementation-Log.md  P1-W2-BE-T2-ReDesign-Implementation-Log.md  P1-W2-BE-T3-Implementation-Log.md  P1-W2-BE-T4-Implementation-Log.md  P1-W2-BE-T5-Implementation-Log.md  P1-W2-BE-T6-Implementation-Log.md  P1-W2-FE-T1-Implementation-Log.md  P1-W2-FE-T2-Implementation-Log.md  P1-W2-FE-T3-Implementation-Log.md
documentations/plans/: P1-FE-T4.md
documentations/testing/: Backend-Testing-Guide.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/wallet/: AccountCard.tsx  CreateWalletFlow.tsx  ImportWalletFlow.tsx  MnemonicConfirm.tsx  MnemonicDisplay.tsx  NavBar.tsx  PasswordForm.tsx  UnlockPrompt.tsx  WalletDashboard.tsx  WalletDetail.tsx  WalletList.tsx  WalletNameInput.tsx  validation.ts
frontend/src/components/wallet/__tests__/: balance.test.ts  dashboard.test.ts  validation.test.ts
frontend/src/lib/api/: client.ts  index.ts  types.ts  wallets.ts
frontend/src/lib/api/__tests__/: client.test.ts  security.test.ts  wallets.test.ts
frontend/src/lib/crypto/: encryption.ts  hdwallet.ts  mnemonic.ts  secureMemory.ts
frontend/src/lib/crypto/__tests__/: encryption.test.ts  hdwallet.test.ts  mnemonic.test.ts  secureMemory.test.ts
frontend/src/lib/rpc/: ethereum.ts  index.ts
frontend/src/lib/rpc/__tests__/: ethereum.test.ts
frontend/src/lib/storage/: balanceService.ts  indexedDB.ts  sessionManager.ts  walletService.ts
frontend/src/lib/storage/__tests__/: indexedDB.test.ts  sessionManager.test.ts  walletService.test.ts
frontend/src/lib/stores/: toastBridge.ts  walletStore.ts
frontend/src/lib/stores/__tests__/: toastBridge.test.ts
frontend/src/lib/types/: wallet.ts
frontend/src/lib/utils/: toast.ts
frontend/src/lib/utils/__tests__/: toast.test.ts
go-backend/: go.mod  go.sum
go-backend/cmd/server/: main.go
go-backend/internal/api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  server.go  types.go
go-backend/internal/database/: connection.go  migration.go
implementation-logs/: P1-W1-BE-T1-Implementation-Log.md  P1-W1-BE-T3-Implementation-Log.md  P1-W1-BE-T5-Implementation-Log.md  P1-W2-BE-T1-Implementation-Log.md
